# Virusszimulator

./: CMakeLists.txt  README.md  def.h  dokumentacio.md  globalis_fvek.c  globalis_fvek.h  main.c
FILE/: SVG.c  SVG.h
KEZEL/: adat_kezel.c  adat_kezel.h  beallitas_kezel.c  beallitas_kezel.h  kattintas_kezel.c  kattintas_kezel.h  szimluacio_kezel.c  szimluacio_kezel.h
RAJZOL/: dinamikus_elemek_rajzol.c  dinamikus_elemek_rajzol.h  graf_rajzol.c  graf_rajzol.h  osszes_rajzol.c  osszes_rajzol.h  szim_rajzol.c  szim_rajzol.h
SDL_FV/: sdl_init.c  sdl_init.h
src/: SVG.c  SVG.h  adat_kezel.c  adat_kezel.h  beallitas_kezel.h  def.h  dinamikus_elemek_rajzol.h  globalis_fvek.c  graf_rajzol.h  kattintas_kezel.h  main.c  osszes_rajzol.c  osszes_rajzol.h  sdl_init.c  sdl_init.h  szim_rajzol.h  szimluacio_kezel.c  szimluacio_kezel.h
